# rspdft

./: .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE.md  MIGRATION_GUIDE.md  README.md  TODO.md
.opencode/skills/create-plan/: SKILL.md
.opencode/skills/finish-plan/: SKILL.md
.opencode/skills/implement-plan/: SKILL.md
assets/: approve_wh3.json  boj45_template.json
crates/pdf-core/: Cargo.toml
crates/pdf-core/src/: document.rs  font.rs  image.rs  lib.rs  text.rs
crates/pdf-core/tests/: integration_tests.rs
crates/template/: Cargo.toml
crates/template/data/: template-schema.json
crates/template/examples/: test_roundtrip.rs
crates/template/src/: lib.rs  parser.rs  renderer.rs  schema.rs
crates/template/src/blocks/: mod.rs
crates/template/tests/: integration_test.rs
crates/thai-text/: Cargo.toml
crates/thai-text/data/: th_TH.dic
crates/thai-text/src/: dictionary.rs  formatter.rs  lib.rs  linebreak.rs  wordcut.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
examples/: approve_wh3.rs  boj45.rs  debug_embed.rs  debug_fonts.rs  full_demo.rs  render_form.rs  test_roundtrip.rs
examples/node/: README.md  package.json  pkg  render.mjs
examples/node/sample/: records.json  template.json
examples/web/: README.md  config.json  index.html  main.js  pkg  style.css
examples/web/sample/: data.json  template.json
input/: approve_wh3_input.json  boj45_input.json
plan/: 001-batch-wasm.md
scripts/: build-wasm.sh
