[workspace]
resolver = "2"
members = [
    "crates/pdf-core",
    "crates/thai-text",
    "crates/template",
    "crates/wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kapong/rspdft"
authors = ["kapong"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# PDF
lopdf = "0.32"

# Image
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# QR Code
qrcode = "0.14"

# Font
ab_glyph = "0.2"
ttf-parser = "0.21"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# Date/Time
chrono = { version = "0.4", default-features = false, features = ["std"] }

# Testing
pretty_assertions = "1.4"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
